RESOLVED FIXED103356
freeV8NPObject: Fix crash when per context data's map doesn't have V8NPObject*.
https://bugs.webkit.org/show_bug.cgi?id=103356
Summary freeV8NPObject: Fix crash when per context data's map doesn't have V8NPObject*.
lazyboy
Reported 2012-11-26 21:09:28 PST
freeV8NPObject: Fix crash when per context data's map doesn't have V8NPObject*.
Attachments
Patch (6.56 KB, patch)
2012-11-26 21:10 PST, lazyboy
no flags
Patch (6.67 KB, patch)
2012-11-27 08:44 PST, lazyboy
no flags
lazyboy
Comment 1 2012-11-26 21:10:23 PST
WebKit Review Bot
Comment 2 2012-11-26 21:14:23 PST
Attachment 176162 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Barth
Comment 3 2012-11-26 21:14:50 PST
Comment on attachment 176162 [details] Patch ok
Adam Barth
Comment 4 2012-11-26 21:15:15 PST
Comment on attachment 176162 [details] Patch stylebot is right.
lazyboy
Comment 5 2012-11-27 08:44:24 PST
Created attachment 176276 [details] Patch Fixed Changelog to add bug id line, I missed it while running prepare-ChangeLog script
WebKit Review Bot
Comment 6 2012-11-27 10:14:56 PST
Comment on attachment 176276 [details] Patch Clearing flags on attachment: 176276 Committed r135874: <http://trac.webkit.org/changeset/135874>
WebKit Review Bot
Comment 7 2012-11-27 10:14:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.