freeV8NPObject: Skip trying to remove object from per context data's ObjectMap if the object does not exist in the map. https://bugs.webkit.org/show_bug.cgi?id=103356

Patch by Istiaque Ahmed <lazyboy@chromium.org> on 2012-11-27
Reviewed by Adam Barth.

Before introducing per context data, it used to be the case that we would ignore removing v8 object
from context data's map if we couldn't find it. With perContextData change, this turned into an ASSERT
instead and we had crash reports.
Related crbug.com/154462.

Source/WebCore:

Test: platform/chromium/plugins/release-frame-content-window.html

* bindings/v8/NPV8Object.cpp:
(WebCore::freeV8NPObject):

LayoutTests:

* platform/chromium/plugins/release-frame-content-window-expected.txt: Added.
* platform/chromium/plugins/release-frame-content-window.html: Added.
* platform/chromium/plugins/resources/empty.html: Added.
* platform/chromium/plugins/resources/empty2.html: Added.

Canonical link: https://commits.webkit.org/121521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135874 268f45cc-cd09-0410-ab3c-d52691b4dbfc